--- a/templates/hicup_ce10_Arima_template.conf
+++ b/templates/hicup_ce10_Arima_template.conf
@@ -1,6 +1,6 @@
 #Directory to which output files should be written (optional parameter)
 #Set to current working directory by default 
-Outdir: HIC003
+Outdir: hicup_out
 
 
 #Number of threads to use
@@ -12,7 +12,7 @@ Quiet:0
 
 
 #Retain intermediate pipeline files (0: off, 1: on)
-Keep:1
+Keep:0
 
 
 #Compress outputfiles (0: off, 1: on)
@@ -24,16 +24,16 @@ Zip:1
 #Note: ensure you specify the correct aligner i.e. Bowtie when 
 #using Bowtie indices, or Bowtie2 when using Bowtie2 indices. 
 #In the example below Bowtie2 is specified.
-Bowtie2: /usr/local/apps/bowtie/2-2.3.5.1/bin/bowtie2
+Bowtie2: /usr/bin/bowtie2
 
 
 #Path to the reference genome indices
 #Remember to include the basename of the genome indices
-Index: /data/marchalce/Genomes/hg38/hg38
+Index: /home/genomes/ce10/ce10_autosomes
 
 
 #Path to the genome digest file produced by hicup_digester
-Digest: /data/marchalce/Genomes/hg38/Digest_hg38_MboI_None_09-55-22_02-12-2019.txt
+Digest: /home/genomes/ce10/Digest_ce10_autosomes_DpnII_Arima.txt
 
 
 #FASTQ format (valid formats: 'Sanger', 'Solexa_Illumina_1.0', 'Illumina_1.3' or 'Illumina_1.5')
@@ -51,5 +51,4 @@ Shortest: 0
 
 
 #FASTQ files to be analysed, placing paired files on adjacent lines
-
 
