--- a/templates/hicup_mm10_HindIII_template.conf
+++ b/templates/hicup_mm10_HindIII_template.conf
@@ -29,11 +29,11 @@ Bowtie2: /usr/bin/bowtie2
 
 #Path to the reference genome indices
 #Remember to include the basename of the genome indices
-Index: /home/genomes/mm10/mm10
+Index: /home/genomes/mm10/mm10_autosomes
 
 
 #Path to the genome digest file produced by hicup_digester
-Digest: /home/genomes/mm10/Digest_mm10_HindIII.txt
+Digest: /home/genomes/mm10/Digest_mm10_autosomes_HindIII.txt
 
 
 #FASTQ format (valid formats: 'Sanger', 'Solexa_Illumina_1.0', 'Illumina_1.3' or 'Illumina_1.5')
