--- a/templates/hicup_dm3_MboI_template.conf
+++ b/templates/hicup_dm3_MboI_template.conf
@@ -29,11 +29,11 @@ Bowtie2: /usr/bin/bowtie2
 
 #Path to the reference genome indices
 #Remember to include the basename of the genome indices
-Index: /home/genomes/dm3/dm3_noU_autosomes
+Index: /home/genomes/dm3/dm3
 
 
 #Path to the genome digest file produced by hicup_digester
-Digest: /home/genomes/dm3/Digest_dm3_noU_autosomes_DpnII.txt
+Digest: /home/genomes/dm3/Digest_dm3_DpnII.txt
 
 
 #FASTQ format (valid formats: 'Sanger', 'Solexa_Illumina_1.0', 'Illumina_1.3' or 'Illumina_1.5')
