--- a/templates/hicup_ce10_MboI_template.conf
+++ b/templates/hicup_ce10_MboI_template.conf
@@ -29,11 +29,11 @@ Bowtie2: /usr/bin/bowtie2
 
 #Path to the reference genome indices
 #Remember to include the basename of the genome indices
-Index: /home/genomes/ce10/ce10_autosomes
+Index: /home/genomes/ce10/ce10
 
 
 #Path to the genome digest file produced by hicup_digester
-Digest: /home/genomes/ce10/Digest_ce10_autosomes_DpnII.txt
+Digest: /home/genomes/ce10/Digest_ce10_DpnII.txt
 
 
 #FASTQ format (valid formats: 'Sanger', 'Solexa_Illumina_1.0', 'Illumina_1.3' or 'Illumina_1.5')
