--- a/templates/hicup_hg38_MboI_template.conf
+++ b/templates/hicup_hg38_MboI_template.conf
@@ -29,11 +29,11 @@ Bowtie2: /usr/bin/bowtie2
 
 #Path to the reference genome indices
 #Remember to include the basename of the genome indices
-Index: /home/genomes/hg38/hg38_autosomes
+Index: /home/genomes/hg38/hg38
 
 
 #Path to the genome digest file produced by hicup_digester
-Digest: /home/genomes/hg38/Digest_hg38_autosomes_MboI.txt
+Digest: /home/genomes/hg38/Digest_hg38_DpnII.txt
 
 
 #FASTQ format (valid formats: 'Sanger', 'Solexa_Illumina_1.0', 'Illumina_1.3' or 'Illumina_1.5')
